<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_nav"
    app:startDestination="@id/home2">
    <fragment
        android:id="@+id/home2"
        android:name="pk.edu.pucit.mcproject.Home"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/contribute"
        android:name="pk.edu.pucit.mcproject.Contribute"
        android:label="@string/contribute"
        tools:layout="@layout/fragment_contribute" />
    <fragment
        android:id="@+id/profile"
        android:name="pk.edu.pucit.mcproject.Profile"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />
</navigation>