<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"


    android:orientation="vertical"
    android:padding="40dp"
    tools:context=".LogInActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="150dp"
       android:src="@drawable/signin"
        android:padding="20dp"
    />
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:textColorHint="@color/colorAccent1"
        android:layout_marginTop="8dp"

        >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:ems="10"
            android:inputType="text"
            android:textSize="22sp"

            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:textColorHint="@color/colorAccent1"
        android:layout_marginTop="8dp"

        >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:ems="10"
            android:inputType="text"
            android:textSize="22sp"

            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:text="@string/login"
        android:textSize="22sp"
        android:layout_marginTop="40dp"
        android:background="@drawable/rounder_button"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:text="@string/register"
        android:textSize="22sp"
        android:layout_marginTop="15dp"
        android:background="@drawable/rounder_button"
        android:onClick="btn_signup_activity"
        />
</LinearLayout>